# aoc2023

./: .gitignore
python/: aoc23.py  pyproject.toml
python/day_01/: day01.py
python/day_02/: day02.py
python/day_03/: day03.py
python/day_04/: day04.py
python/day_05/: day05.py
python/day_06/: day06.py
