[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = "Advent of code 2023"
authors = ["MitsCommitch <mitscommitch@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
